--- a/index.css
+++ b/index.css
@@ -9,27 +9,25 @@
   src: url(./fonts/Noto_Sans_JP/NotoSansJP-Regular.otf);
 }
 
-
-
 body {
   font-family: noto-Regular;
 }
-.header {
+.header h1 {
   text-align: center;
   color: #f4a300;
   font-size: 32px;
   margin-top: 16px;
-  letter-spacing: 1px;
 }
 
 .info {
-  margin: 16px 260px 0;
+  margin: 16px 0;
   text-align: center;
 }
 
 .info p {
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 
 .wrap-text {
@@ -38,7 +36,6 @@ body {
 
 .text-highlight {
   color: #f4a300;
-  
 }
 
 .banner {
@@ -47,7 +44,7 @@ body {
 }
 
 .banner img {
-  width: 80%;
+  width: 85%;
 }
 
 .banner-desc p {
@@ -71,15 +68,14 @@ body {
 .footer p {
   font-size: 14px;
   font-weight: 500;
-  letter-spacing: 1px;
 }
 
 .footer-content {
-  padding: 24px 0 32px
+  padding: 24px 0 32px;
 }
 
 .footer-info {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .footer-info h3 {
@@ -88,7 +84,9 @@ body {
 }
 
 .footer-info p {
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
 
 .footer-contact a {
@@ -107,37 +105,33 @@ body {
 .contact-email {
   color: #87c22c;
 }
-@media screen and (max-width: 1280px) {
-  .header h1 {
-    font-size: 32px;
-  }
 
-  .info {
-    margin: 16px 24px;
-  }
-}
+/* Responsive */
 @media screen and (max-width: 1024px) {
   .banner img {
     width: 100%;
   }
 }
 
-@media screen and (max-width: 768px) { }
+@media screen and (max-width: 768px) {
+  .info {
+    margin: 16px 24px;
+  }
+}
 
 @media screen and (max-width: 576px) {
   .header h1 {
     font-size: 18px;
-    letter-spacing: 1px;
   }
 
   .info {
     margin: 16px 12px 0;
-    
   }
 
   .info p {
     font-size: 12px;
     font-weight: 500;
+    letter-spacing: -.5px;
   }
 
   .banner-desc p {
@@ -154,6 +148,11 @@ body {
 
   .footer-info h3 {
     font-size: 12px;
+  }
+
+  .footer-info p {
+    font-size: 16px;
+    font-weight: 500;
   }
 
   .footer-contact a {
